fixed the bright flash on page load dark mode

--- a/css/main.css
+++ b/css/main.css
@@ -860,9 +860,14 @@ html[data-theme="dark"] img {
   opacity: .85;
 }
 
+html.color-theme-in-transition {
+  -webkit-transition-duration: 300ms;
+          transition-duration: 300ms;
+}
+
 html.color-theme-in-transition *:not(.theme-switcher-checkbox-ui),
-html.color-theme-in-transition *:not(.theme-switcher-checkbox-ui):before,
-html.color-theme-in-transition *:not(.theme-switcher-checkbox-ui):after {
+  html.color-theme-in-transition *:not(.theme-switcher-checkbox-ui):before,
+  html.color-theme-in-transition *:not(.theme-switcher-checkbox-ui):after {
   -webkit-transition-duration: 0ms !important;
           transition-duration: 0ms !important;
   -webkit-transition-property: color, background-color, border !important;
