--- a/resources/sass/utilities/_colors.scss
+++ b/resources/sass/utilities/_colors.scss
@@ -99,12 +99,15 @@ html[data-theme="dark"] {
 }
 
 html {
+  &.color-theme-in-transition {
+    @apply duration-300;
 
-  &.color-theme-in-transition *:not(.theme-switcher-checkbox-ui),
-  &.color-theme-in-transition *:not(.theme-switcher-checkbox-ui):before,
-  &.color-theme-in-transition *:not(.theme-switcher-checkbox-ui):after {
-    transition-duration: 0ms !important;
-    transition-property: color, background-color, border !important;
-    transition-delay: 0 !important;
+    & *:not(.theme-switcher-checkbox-ui),
+    & *:not(.theme-switcher-checkbox-ui):before,
+    & *:not(.theme-switcher-checkbox-ui):after {
+      transition-duration: 0ms !important;
+      transition-property: color, background-color, border !important;
+      transition-delay: 0 !important;
+    }
   }
 }
